# RendererEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  3D_RENDERER_TWO.sln  CMakeLists.txt  Code-of-Conduct.md  Contributing.md  LICENSE  README.md  Renderer_Engine.sln  azure-pipelines.yml  dependencies.cmake  repoConfiguration.json  toolchain.cmake
Examples/Sandbox/src/: CMakeLists.txt  Sandbox.cpp
Examples/Sandbox3D/src/: CMakeLists.txt  Sandbox.cpp
Sandbox/src/Layers/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h
Sandbox3D/src/Layers/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h
Tetragrama/: CMakeLists.txt  Editor.cpp  Editor.h  EditorCameraController.cpp  EditorCameraController.h  EditorWindow.cpp  EditorWindow.h  MessageToken.h  pch.h
Tetragrama/Components/: AboutUIComponent.h  DemoUIComponent.h  DockspaceUIComponent.cpp  DockspaceUIComponent.h  HierarchyViewUIComponent.cpp  HierarchyViewUIComponent.h  InspectorViewUIComponent.cpp  InspectorViewUIComponent.h  LogUIComponent.cpp  LogUIComponent.h  ProjectViewUIComponent.cpp  ProjectViewUIComponent.h  SceneViewportUIComponent.cpp  SceneViewportUIComponent.h  UIComponent.cpp  UIComponent.h
Tetragrama/Components/Events/: SceneTextureAvailableEvent.h  SceneViewportFocusedEvent.h  SceneViewportResizedEvent.h  SceneViewportUnfocusedEvent.h  UIComponentEvent.h
Tetragrama/Controllers/: CameraController.cpp  CameraControllerTypeEnums.h  EditorCameraController.cpp  EditorCameraController.h  ICameraController.h  IController.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h
Tetragrama/Helpers/: UIComponentDrawerHelper.cpp  UIComponentDrawerHelper.h  UIDispatcher.h  WindowsHelper.cpp  WindowsHelper.h
Tetragrama/Importers/: AssetImporter.cpp  AssimpImporter.cpp
Tetragrama/Inputs/: Keyboard.h  Mouse.h
Tetragrama/Layers/: ImguiLayer.cpp  ImguiLayer.h  RenderLayer.cpp  RenderLayer.h  UILayer.cpp  UILayer.h
Tetragrama/Messengers/: Message.h  Messenger.h
Tetragrama/src/: CMakeLists.txt  Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EditorCameraController.cpp  EditorCameraController.h  EntryPoint.cpp  MessageToken.h  Messenger.cpp  Messenger.h  pch.h
Tetragrama/src/Components/: AboutUIComponent.h  DemoUIComponent.h  DockspaceUIComponent.cpp  DockspaceUIComponent.h  HierarchyViewUIComponent.cpp  HierarchyViewUIComponent.h  InspectorViewUIComponent.cpp  InspectorViewUIComponent.h  LogUIComponent.cpp  LogUIComponent.h  ProjectViewUIComponent.cpp  ProjectViewUIComponent.h  SceneViewportUIComponent.cpp  SceneViewportUIComponent.h
Tetragrama/src/Helpers/: UIComponentDrawerHelper.cpp  UIComponentDrawerHelper.h  UIDispatcher.h  WindowsHelper.cpp  WindowsHelper.h
Tetragrama/src/Importers/: AssetImporter.cpp  AssimpImporter.cpp  AssimpImporter.h  IAssetImporter.h
Tetragrama/src/Layers/: ExampleLayer.cpp  ExampleLayer.h  RenderLayer.cpp  RenderLayer.h  RenderingLayer.cpp  RenderingLayer.h  UILayer.cpp  UILayer.h  UserInterfaceLayer.cpp  UserInterfaceLayer.h
Tetragrama/src/Messengers/: Message.h  Messenger.h
Tetragrama/src/Serializers/: EditorSceneSerializer.cpp  EditorSceneSerializer.h  Serializer.h
ZEngine/: CMakeLists.txt
ZEngine/ZEngine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineConfiguration.h  ZEngine.h  ZEngineDef.h
ZEngine/ZEngine/Components/: UIComponent.cpp  UIComponent.h  UIComponentEvent.h
ZEngine/ZEngine/Controllers/: CameraControllerTypeEnums.h  ICameraController.h  PerspectiveCameraController.h
ZEngine/ZEngine/Core/: CoreEvent.h  CoroutineScheduler.h  EventDispatcher.h  IEventable.h  IInitializable.h  IPipeline.h  IPipelineContext.cpp  IPipelineStage.cpp  IRenderable.h  IUpdatable.h  TimeStep.h
ZEngine/ZEngine/Event/: CoreEvent.h  EngineClosedEvent.h  EventCategory.h  EventType.h  KeyEvent.h  KeyPressedEvent.h  MouseButtonMovedEvent.h  MouseButtonReleasedEvent.h  MouseEvent.h  TextInputEvent.h  WindowClosedEvent.h  WindowEvent.h  WindowMaximizedEvent.h  WindowMinimizedEvent.h  WindowResizedEvent.h  WindowsRestoredEvent.h
ZEngine/ZEngine/Hardwares/: VulkanDevice.cpp  VulkanDevice.h  VulkanLayer.h
ZEngine/ZEngine/Helpers/: Helper.cpp  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h
ZEngine/ZEngine/Inputs/: IInputEventCallback.h  IMouseEventCallback.h  Keyboard.h  Mouse.h
ZEngine/ZEngine/Layers/: ImguiLayer.cpp  ImguiLayer.h  LayerStack.cpp
ZEngine/ZEngine/Logging/: LoggerConfiguration.h  LoggerDefinition.h
ZEngine/ZEngine/Managers/: IManager.h
ZEngine/ZEngine/Maths/: Math.cpp
ZEngine/ZEngine/Rendering/: GPUTypes.h  Swapchain.cpp  Swapchain.h
ZEngine/ZEngine/Serializers/: GraphicScene3DSerializer.cpp  GraphicScene3DSerializer.h
ZEngine/ZEngine/Window/: CoreWindow.cpp  CoreWindow.h  ICoreWindowEventCallback.h
ZEngine/ZEngine/Windows/: CoreWindow.cpp  CoreWindow.h  WindowConfiguration.h  WindowProperty.h
ZEngine/include/ZEngine/: Engine.h  EngineConfiguration.h  (+7 more)
ZEngine/src/: Attachment.cpp  BasicMaterial.cpp  BufferHelper.cpp  CMakeLists.txt  CameraController.cpp  CommandBuffer.cpp  CommandPool.cpp  CompilationStage.cpp  CoreWindow.cpp  CoroutineScheduler.cpp  CubeGeometry.cpp  DirectionalLight.cpp  Engine.cpp  Fence.cpp  FirstPersonShooterCamera.cpp  FirstPersonShooterCameraController.cpp  FrameBuffer.cpp  FrameBufferTextureHelpers.cpp  GraphicContext.cpp  GraphicRenderer.cpp  GraphicRenderer2D.cpp  GraphicRenderer3D.cpp  GraphicRendererCleanupStage.cpp  GraphicRendererDisassembleStage.cpp  GraphicRendererDrawStage.cpp  GraphicRendererEndFrameBindingStage.cpp  GraphicRendererFinalizePipelineCreationStage.cpp  GraphicRendererPipelineContext.cpp  GraphicRendererStartFrameBindingStage.cpp  GraphicRendererStorage.cpp  GraphicRendererStorageGenerationStage.cpp  GraphicScene.cpp  GraphicScene2D.cpp  GraphicScene3D.cpp  GraphicScene3DSerializer.cpp  GraphicSceneEntity.cpp  GraphicVertex.cpp  Helper.cpp  ICompilerStage.cpp  IDevice.cpp  (+45 more)
ZEngine/tests/: CMakeLists.txt  IntrusivePtr_test.cpp  IntrusiveWeakPtr_test.cpp  MemoryOperation_test.cpp  ThreadPool_test.cpp  bitmap_test.cpp  shaderCompiler_test.cpp
__externals/imgui/: CMakeLists.txt
(+699 files in other folders)
